<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeviceOwnerDatabaseFragment" >
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat"
        android:orientation="vertical" >
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bioLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fingerInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bioLayout"
        android:background="@drawable/rounded_borders" >

        <RadioGroup
            android:id="@+id/radioGroupR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <RadioButton
                android:id="@+id/fingerR1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerR1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/fingerR2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerR2" />
            <RadioButton
                android:id="@+id/fingerR3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerR3" />
            <RadioButton
                android:id="@+id/fingeR4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerR4" />
            <RadioButton
                android:id="@+id/fingerR5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerR5" />

        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enrollButton"
        android:layout_below="@+id/bioLayout"
        android:layout_marginLeft="18dp"
        android:text="@string/enrR"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/enrollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fingerInfoLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/enroll_selected" />

    <Button
        android:id="@+id/ButtonContinueRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enrollButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/fin" />

</RelativeLayout>