<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BioExampleActivity$DummySectionFragment" >
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat"
        android:orientation="vertical" >
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/fingerSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_borders" >

        <Button
            android:id="@+id/enrollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@+id/radioGroup"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/radioGroup"
            android:text="@string/enroll_selected" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/enrollButton"
            android:layout_below="@+id/enrollButton"
            android:text="@string/delete_selected" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <RadioButton
                android:id="@+id/finger1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finger1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/finger2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finger2" />
        </RadioGroup>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fingerSelectionLayout"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <Button
            android:id="@+id/practiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/verifyButton"
            android:text="@string/practice" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>